@@ -1,5 +1,22 @@
 <script type="text/javascript">
 
+function source_trigger(checkbox) {
+    image_list = document.getElementById('image-list').childNodes;
+
+    for (i=0; i < image_list.length; i++) {
+        node = image_list[i];
+
+        if (node.className == 'child-image') {
+            if (checkbox.checked == true) {
+                node.style.display = 'none';
+            } else {
+                node.style.display = 'inline';
+            }
+        }
+    }
+}
+
+
 function show_images(image_html, folder_id)
 {
     var button = document.getElementById('image-button');
