@@ -1,6 +1,6 @@
 <ul id="image-list">
 <!-- BEGIN thumbnail-list -->
-<li id="image_{ID}" class="{SELECT}">
+<li id="image_{ID}" class="{STATUS}" style="display : {DISPLAY}; {HIGHLIGHT}">
    {THUMBNAIL}
    <p class="dimensions">
    {VIEW} {EDIT}
